--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 
 PORT=5050
-MONGO_URI=mongodb+srv://Asish:6a8VPECyifHBMNmN@cluster0.18rke.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=dsfa
 JWT_SECRET=supersecretkey
